my-app/src/check-out/check-out.component.css
/* regole generiche */
:host { 
    position: relative;
    z-index: 100; 
}
p{ font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; }
body , header , footer{
    background-color: #2b7b3b;
}
/* pulsante lingua */
#language{
    position: relative;
    right: -85.5vw;
    top: 5vh;
}

/* pulsante back */
#back{
    background-color: #2b7b3b;
    border: none;
    position:absolute;
    left: 50px;
    top: 50px;
}
#back > p{
    position: relative;
    display: inline;
    color: white;
}
#back-text{
    font-weight: 700;
    font-size:50px;
}
#back-frecia{
    top: 12px;
    font-weight: 300;
    font-size:90px;
}

/* logo */
#cont-logo{
    width: 250px;
    height: 250px;
    position: absolute;
    margin-left: 415px;
    margin-top: 26%
}
img{
    position: relative;
    width: 100%;
}
#MO{
    font-size: 100px;
    color: white;
    font-weight: 700;
    margin-bottom: 0px;
}
#TE{
    color: rgb(190, 185, 185);
    font-size:40px;
  
    font-weight:400;
    margin-top: 0px;
}
#testiMOTE{
    position: relative;
    top:600px;
    left:100px;
    line-height:100px;
}
#CObox{
    position: fixed;
    top:950px;
    height: 600px;
    border-top: solid 1px black;
    padding-bottom: 50px;
    width: 80vw;
    margin: 0 auto;
    left: 10vw;
    overflow-y: auto;
    overflow-x: hidden;
}
#CObox::-webkit-scrollbar {
    display: none;
}
#importo{
    font-size:80px;
    margin-top: 0;
    margin-bottom: 0;
    text-align: center;
    color: white;
    font-weight:600;
}
#totale{
    color: rgb(224, 215, 215);
    font-size:40px;
    text-align: left;
    font-weight:400;
    margin-bottom: 1%;
}
#prezzo-div{
    width: 200px;
    height: 200px;
    position: fixed;
    bottom: 60px;
    left:80px;
    line-height: normal;
}
#checkout{
    font-size:35px;
    text-align: center;
    font-weight:650;
    margin-top: 15px;
}
#checkoutBut{
    background-color: #FFCA40;
    width: 280px;
    height: 200px;
    border-radius: 70px;
    position: absolute;
    bottom: 80px;
    right: 80px;
    border: none;
    z-index: 500;
}


/* menu editabile */
section{
    z-index: 1000;
    position: fixed; 
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    display: flex; 
    justify-content: center;
    align-items: center;
    backdrop-filter: blur(5px);
    height: 100%;
    width: 100%;
}
.invisible {
    display: block;
}
.visible {
    display: none;
}
menu{
    z-index: 213213123123;
    position: fixed;
    height: 80%;
    width: 90%;
    left: 3.5%;
    background-color: white;
    border-radius: 80px;
}

#imgEdit{
    position: relative;
    scale:0.6;
    margin-top: -0%;
    left: -3.5%;
}

#close{
    position: absolute;
    right: 3vh;
    top: 3vh;

    width: 4vh;
    height: 4vh;

    border-radius: 20px;
    
    border: none;

    text-align: center;
    justify-content: center;
}
#close > p{ 
    position: relative;
    font-size: 30px;
    font-weight: 700;
    margin-top: 15px;
}

#nomeEdit{
    margin-top: -10%;
    position: absolute;
    width: 100%;
    text-align: center;
    left: -0.5
    /* background-color: #2b7b3b; */
}
#nomeEdit > p{
    font-size: 70px;
    font-weight: 800;
}

#boxEdit{
    background-color: #FFCA40;
    /* background-color:#ffc94000; */
    position: absolute;
    width: 98%;
    height: 40%;
    left: -0;
    overflow-y: auto;
    overflow-x: hidden;;
}
#boxEdit::-webkit-scrollbar {
    display: none;
}
#toping{
    position: relative;
    left: 20px;
    display: block;
    height: 125px;
}



#prezzoEdit{
    position: absolute;
    top: 87%;
    left: 7%;
}
#prezzoEdit  > p{
    font-size: 110;
    font-weight: 1100;
    color: #FFCA40;
}
#doneEdit{
    background-color: #FFCA40;
    width: 280px;
    height: 200px;
    border-radius: 70px;
    position: absolute;
    bottom: 80px;
    right: 80px;
    border: none;
    z-index: 500;
    text-align: center;
}
#doneEdit > p{
    position: relative;
    font-size:35px;
    font-weight:650;
    margin-top: 15px;
}

